--- a/index.haml
+++ b/index.haml
@@ -4,7 +4,7 @@
     %script{:src => "GibGen.js", :type => "text/javascript"}
   %body{:onload => "init(document.form)", :style => "background-color: white"}
     %div{:style => "position:fixed;right:0;width:100px;background-color:rgba('220,220,220,0.5');top:20px;"}
-      %a{:href => "http://yolk.cc"} Y O L
+      %a{:href => "http://yolk.cc"} Y O L K
     %h1 Markov &#9829; Admires 
     %p 
       Use the 
