--- a/index.haml
+++ b/index.haml
@@ -1,6 +1,9 @@
 !!!
 %html{:xmlns => "http://www.w3.org/1999/xhtml"}
   %head
+    %meta{:property => "og:image", :content => "http://markovadmires.yolk.cc/500.png"}
+    %meta{:property => "og:title", :content => "MARKOV &#9829; ADMIRES"}
+    %meta{:property => "og:url", :content => "http://markovadmires.yolk.cc"}
     %script{:src => "GibGen.js", :type => "text/javascript"}
   %body{:onload => "init(document.form)", :style => "background-color: white"}
     %div{:style => "position:fixed;right:0;width:100px;background-color:rgba('220,220,220,0.5');top:20px;"}
