mr crispin is being an ass today and doesn't get coding i don't think

--- a/index.haml
+++ b/index.haml
@@ -17,7 +17,9 @@
       %em
         Special Thanks to 
         %a{:href => "http://www.judisdaid.com"}Judd Morissey
-        for teaching me about Markov chains.
+        for
+        %b telling
+        me about Markov chains.
     %form#form{:action => "", :name => "form"}
       Input (enter any text or use the scraped status updates pre-filled below)
       %br/
