added date, vidz

--- a/index.haml
+++ b/index.haml
@@ -12,7 +12,7 @@
     %p 
       Use the 
       %a{:href => "http://en.wikipedia.org/wiki/Markov_chain"} Markov Chain 
-      generator below along with every update until today scraped from FB.
+      generator below along with every update until 04/01/2013 scraped from FB.
     %p 
       %em
         Special Thanks to 
@@ -48,6 +48,13 @@
       %div
         %p Then paste below and submit!
         %iframe{:src => "https://docs.google.com/forms/d/1XwOt4qsngtXUsS-E71Jzqs9GYpl2qyJHnA6h9wKTKB4/viewform?embedded=true", :width => "400", :height => "600"} Loading…
+      %div
+        %h1
+          VIDZ
+        %iframe{:src => "https://www.facebook.com/video/embed?video_id=10151310858486160", :width => "564", :height => "320", :frameborder => "0"}
+        %h2 
+          %a{:href => "https://www.facebook.com/dafnaganani"}Dafna Ganani
+        %iframe{:src => "https://www.facebook.com/video/embed?video_id=10151528913397162", :width => "564", :height => "320", :frameborder => "0"}
       :javascript
           var _gauges = _gauges || [];
           (function() {
