--- a/index.haml
+++ b/index.haml
@@ -1,6 +1,7 @@
 !!!
 %html{:xmlns => "http://www.w3.org/1999/xhtml"}
   %head
+    %title MARKOV &#9829; ADMIRES
     %meta{:property => "og:image", :content => "http://markovadmires.yolk.cc/500.png"}
     %meta{:property => "og:title", :content => "MARKOV ♥ ADMIRES"}
     %meta{:property => "og:url", :content => "http://markovadmires.yolk.cc"}
